test/data/pass/function.z
fn add(a: int, b: int) -> int {

	if a == b {
		printf("Hello!\n");
	}
	return a+b;
}

printf("%i\n", add(1, 1));
