test/data/fail/return.z
fn add(a: int, b: int) -> int {
	if a == b {
		printf("Hello!");
	}
	return "asd";
}
